added other buttons

--- a/PickSuggestion.html
+++ b/PickSuggestion.html
@@ -8,6 +8,7 @@
 <!-- Header -->
 <header class = "flex-container">
       <span id = "HomeButton"><a href = "#Home">Home</a></span>
+      <h1 id="SiteName">NAME OF WEBPAGE</h1> <!--Instead of a home button the title can link back to the homepage?-->
       <nav>
       <span id = "UserButton"><a href = "#UserProfile">User_Name</a></span>
       </nav>
@@ -18,7 +19,11 @@
         </div>
 <!--Suggestion Buttons-->
     <div class = "SuggestionButton">
-        <a>Mental Health</a>
+        <a>MENTAL HEALTH</a>
+        <a>DIY</a>
+        <a>HOW-TO</a>
+        <a>PHYSICAL ACTIVITIES</a>
+        <a>OTHER</a>
     </div>
     </body>
 </html>
