fixed buttons and added background

--- a/PickSuggestion.html
+++ b/PickSuggestion.html
@@ -14,16 +14,16 @@
       </nav>
 </header>
     <body>
-        <div class = "header">
+        <img src = "mountians.jpeg" class="bg">
             <h1 id = "title">Suggestion</h1>
-        </div>
 <!--Suggestion Buttons-->
-    <div class = "SuggestionButton">
-        <a>MENTAL HEALTH</a>
-        <a>DIY</a>
-        <a>HOW-TO</a>
-        <a>PHYSICAL ACTIVITIES</a>
-        <a>OTHER</a>
-    </div>
+            <div id = "container">
+                <button id = "MentalButton">MENTAL HEALTH</button>
+                <button>DIY</button>
+                <button>HOW-TO</button>
+                <br>
+                <button>PHYSICAL ACTIVITIES</button>
+                <button>OTHER</button>
+        </div>
     </body>
 </html>
