--- a/PickSuggestion.html
+++ b/PickSuggestion.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href = "./PickSuggestionStyle.css" type = "text/css" rel = "stylesheet">
+        <link href = "css/style.css" type = "text/css" rel = "stylesheet">
         <title>Suggestions</title>
     </head>
 
 <!-- Header -->
 <header class = "flex-container">
-      <span id = "HomeButton"><a href = "#Home">Home</a></span>
+      <span id = "HomeButton"><a href = "index.html">Home</a></span>
       <h1 id="SiteName">NAME OF WEBPAGE</h1> <!--Instead of a home button the title can link back to the homepage?-->
       <nav>
       <span id = "UserButton"><a href = "#UserProfile">User_Name</a></span>
@@ -15,15 +15,15 @@
 </header>
     <body>
         <img src = "mountians.jpeg" class="bg">
-            <h1 id = "title">Suggestion</h1>
+            <h1 class= "title">Suggestion</h1>
 <!--Suggestion Buttons-->
-            <div id = "container">
-                <button id = "MentalButton">MENTAL HEALTH</button>
-                <button>DIY</button>
-                <button>HOW-TO</button>
-                <br>
-                <button>PHYSICAL ACTIVITIES</button>
-                <button>OTHER</button>
+        <div class = "categories">
+            <button>MENTAL HEALTH</button>
+            <button>DIY</button>
+            <button>HOW-TO</button>
+            <br>
+            <button>PHYSICAL ACTIVITIES</button>
+            <button>OTHER</button>
         </div>
     </body>
 </html>
