Layout and organization

--- a/PickSuggestion.html
+++ b/PickSuggestion.html
@@ -7,23 +7,23 @@
 
 <!-- Header -->
 <header class = "flex-container">
-      <span id = "HomeButton"><a href = "#Home">Home</a></span>
       <h1 id="SiteName">NAME OF WEBPAGE</h1> <!--Instead of a home button the title can link back to the homepage?-->
       <nav>
-      <span id = "UserButton"><a href = "#UserProfile">User_Name</a></span>
+        <span id = "UserButton"><a href = "#UserProfile">Username</a></span>
+        <span id = "HomeButton"><a href = "#Home">Home</a></span>
       </nav>
 </header>
     <body>
         <img src = "mountians.jpeg" class="bg">
-            <h1 id = "title">Suggestion</h1>
+        <h1 id = "title">Suggestion</h1>
 <!--Suggestion Buttons-->
-            <div id = "container">
-                <button id = "MentalButton">MENTAL HEALTH</button>
-                <button>DIY</button>
-                <button>HOW-TO</button>
-                <br>
-                <button>PHYSICAL ACTIVITIES</button>
-                <button>OTHER</button>
+        <div id = "container">
+            <button>OTHER</button>
+            <button>DIY</button>
+            <button>HOW-TO</button>
+            <br>
+            <button>PHYSICAL ACTIVITIES</button>
+            <button id = "MentalButton">MENTAL HEALTH</button>
         </div>
     </body>
 </html>
