--- a/PickSuggestion.html
+++ b/PickSuggestion.html
@@ -6,13 +6,14 @@
     </head>
 
 <!-- Header -->
-<header class = "flex-container">
-      <span id = "HomeButton"><a href = "index.html">Home</a></span>
-      <h1 id="SiteName">NAME OF WEBPAGE</h1> <!--Instead of a home button the title can link back to the homepage?-->
-      <nav>
-      <span id = "UserButton"><a href = "#UserProfile">User_Name</a></span>
-      </nav>
-</header>
+<nav id = "navbar">
+    <a class = "active" href = "./index.html">Home</a>
+    <h1 id="SiteName">NAME OF WEBPAGE</h1> <!--Instead of a home button the title can link back to the homepage?-->
+    <div id = "navbar-right">
+        <a href = "#UserProfile">Login</a>
+        <a href = "#UserSignUp">Sign Up</a>
+    </div>
+</nav>
     <body>
         <img src = "mountians.jpeg" class="bg">
             <h1 class= "title">Suggestion</h1>
