--- a/PickSuggestion.html
+++ b/PickSuggestion.html
@@ -1,29 +1,85 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href = "css/style.css" type = "text/css" rel = "stylesheet">
+        <script src="js/script.js" type="text/javascript"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         <title>Suggestions</title>
     </head>
 
 <!-- Header -->
-<header class = "flex-container">
-      <span id = "HomeButton"><a href = "index.html">Home</a></span>
-      <h1 id="SiteName">NAME OF WEBPAGE</h1> <!--Instead of a home button the title can link back to the homepage?-->
-      <nav>
-      <span id = "UserButton"><a href = "#UserProfile">User_Name</a></span>
-      </nav>
-</header>
+<nav id = "navbar">
+    <a class = "active" href = "./index.html">Home</a> <!--Instead of a home button the title can link back to the homepage?-->
+    <h1 id="SiteName">NAME OF WEBPAGE</h1>
+    <div id = "navbar-right">
+        <a href = "#UserProfile">Login</a>
+        <a href = "#UserSignUp">Sign Up</a>
+    </div>
+</nav>
     <body>
-        <img src = "mountians.jpeg" class="bg">
             <h1 class= "title">Suggestion</h1>
 <!--Suggestion Buttons-->
-        <div class = "categories">
-            <button>MENTAL HEALTH</button>
-            <button>DIY</button>
-            <button>HOW-TO</button>
-            <br>
-            <button>PHYSICAL ACTIVITIES</button>
-            <button>OTHER</button>
+<div class=container>
+<div class="row justify-content-center align-self-center">
+        <div class="col my-auto"><div class = "card">
+            <div class = "card_inner">
+                <button class = "card_front">
+                    Mental Health
+                </button><button class = "card_back">
+                    Example Suggestion
+                </button></div></div></div> <div class="col"><div class = "card">
+            <div class = "card_inner">
+                <button class = "card_front">
+                    DIY
+                </button>
+                <button class = "card_back">
+                    Example Suggestion
+                </button>
+            </div></div>
         </div>
+        <div class="col"><div class = "card">
+            <div class = "card_inner">
+                <button class = "card_front">
+                    Physical Activity
+                </button>
+                <button class = "card_back">
+                    Example Suggestion
+                </button>
+            </div></div>
+        </div>
+    </div>
+<div class="row">
+        <div class="col"><div class = "card">
+            <div class = "card_inner">
+                <button class = "card_front">
+                    How-To
+                </button>
+                <button class = "card_back">
+                    Example Suggestion
+                </button>
+            </div></div>
+        </div>
+        <div class="col"><div class = "card">
+            <div class = "card_inner">
+                <button class = "card_front">
+                    Other
+                </button>
+                <button class = "card_back">
+                    Example Suggestion
+                </button>
+            </div></div>
+        </div>
+    </div></div>
+        <script>let cards = document.getElementsByClassName('card');
+            Array.from(cards).forEach((card) => {
+               card.addEventListener('click', () => {
+                card.classList.toggle('card--flipped');
+                console.log("Card clicked!");
+              });
+            });</script>           
     </body>
 </html>
