--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
         <script src="js/script.js" type="text/javascript"></script>
     </head>
     <!--Nav Bar-->
-    <header class = "flex-container">
-        <span id = "HomeButton"><a href = "#Home">Home</a></span>
+    <nav id = "navbar">
+        <a class = "active" href = "#Home">Home</a>
         <h1 id="SiteName">NAME OF WEBPAGE</h1> <!--Instead of a home button the title can link back to the homepage?-->
-        <nav>
-            <span><a href = "#UserProfile">Login</a></span>
-            <span><a href = "#UserProfile">Sign Up</a></span>
-        </nav>
-  </header>
+        <div id = "navbar-right">
+            <a href = "#UserProfile">Login</a>
+            <a href = "#UserSignUp">Sign Up</a>
+        </div>
+    </nav>
     <body>
-        <img src="mountians.jpeg" class="bg">
         <!-- can use PHP to display a challenge on screen load -->
         <div class="challenge">
             <h1 class="title" id="daily-challenge" onclick="loadDoc()">Click to see Daily Challenge</h1>
