--- a/PickSuggestion.html
+++ b/PickSuggestion.html
@@ -75,6 +75,7 @@
                 card.classList.toggle('card--flipped');
                 console.log("Card clicked!");
               });
-            });</script>           
+            });</script>  
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>         
     </body>
 </html>
