--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
             <p>Let alone, we cannot see our friends, so this website is to </p>
             <p>help you find ideas on what to do, at the same time, being </p>
             <p>safe.</p>
+            <ul id = "start"> 
+                <li>
+                  <a href="#">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span>Get Started</span>
+                  </a> 
+                </li>
+            </ul>
         </div>
                 <div class = "rules">
                     <ul>
