--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Home</title>
         <link href="css/style.css" type="text/css" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="js/script.js" type="text/javascript"></script>
+        <!-- <script src="js/script.js" type="text/javascript"></script> -->
     </head>
     <!--Nav Bar-->
     <header class = "flex-container">
@@ -86,5 +86,7 @@
             </div>
           </div>
         </div>   
+        <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase.js"></script>
+        <script src="../js/script.js" type="text/javascript"></script>
     </body>
 </html>
