Photos on homepage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>safe.</p>
             <ul id = "start"> 
                 <li>
-                  <a href="#">
+                  <a href = "PickSuggestion.html">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -51,39 +51,51 @@
                   </a> 
                 </li>
             </ul>
+        </div> 
+        <div class = "rules">
+            <ul>
+                <div class="glitch" data-text="COVID SAFETY RULES">COVID SAFETY RULES</div>
+                <div class="glow">COVID SAFETY RULES</div>
+                <br>
+                <br>
+                <br>
+                <li>Always wear a mask in public settings!</li>
+                <p>this will prevent you from breathing in the evil virus!</p>
+                <li>Wash your hands frequently!</li>
+                <li>Maintain six feet distance from others!</li>
+                <li>Carry handsanitizer with you when possible!</li>
+                <li>Stop using your hands for everything!</li>
+                <p>hip thrust that door!!</p> 
+                <li>Avoid crowded areas!</li>
+                <p>we don't like people!!</p>
+                <li>Avoid public transportation if possible!</li>
+            </ul>
+            <br>
+            <br>
+            <br>
         </div>
-                <div class = "rules">
-                    <ul>
-                        <div class="glitch" data-text="COVID SAFETY RULES">COVID SAFETY RULES</div>
-                        <div class="glow">COVID SAFETY RULES</div>
-                        <br>
-                        <br>
-                        <br>
-                        <li>Always wear a mask in public settings!</li>
-                        <p>this will prevent you from breathing in the evil virus!</p>
-                        <li>Wash your hands frequently!</li>
-                        <li>Maintain six feet distance from others!</li>
-                        <li>Carry handsanitizer with you when possible!</li>
-                        <li>Stop using your hands for everything!</li>
-                        <p>hip thrust that door!!</p> 
-                        <li>Avoid crowded areas!</li>
-                        <p>we don't like people!!</p>
-                        <li>Avoid public transportation if possible!</li>
-                    </ul>
-                    <div class="scanlines"></div>
-                    <br>
-                    <br>
-                    <br>
-                </div>
-        <div class = "photo-container">
-            
-        </div>
-
-
         <!-- <div id="demo"><h2>Let AJAX change this text</h2></div> -->
 
 
     </body>
+    <div id = "photos">
+    <figure class="snip1295"><img src="media/Jake_Mask.jpeg" alt="sample67"/>
+        <div class="border one">
+          <div></div>
+        </div>
+        <div class="border two">
+          <div></div>
+        </div>
+      </figure>
+      <figure class="snip1295"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample68.jpg" alt="sample68"/>
+        <div class="border one">
+          <div></div>
+        </div>
+        <div class="border two">
+          <div></div>
+        </div>
+      </figure>
+    </div>
 </html>
 
 <!-- on revisit: add page loading transitions -->
