--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div></div>
         </div>
       </figure>
-      <figure class="snip1295"><img src="media/Gabby_Mask.jpeg" alt="sample68"/>
+      <figure class="snip1295"><img src="media/Komal.jpeg" alt="sample68"/>
         <div class="border one">
           <div></div>
         </div>
