stop pushing stuff on main please

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- <div id="demo"><h2>Let AJAX change this text</h2></div> -->
 
         <div id = "photos">
-          <figure class="snip1295"><img src="media/Jake_Mask.jpeg" alt="sample67" width="500" height="500"/>
+          <figure class="snip1295"><img src="media/Jake_Mask.jpeg" alt="sample67"/>
               <div class="border one">
                 <div></div>
               </div>
@@ -89,7 +89,7 @@
                 <div></div>
               </div>
             </figure>
-            <figure class="snip1295"><img src="media/Komal.jpeg" alt="sample68" width="500" height="500/>
+            <figure class="snip1295"><img src="media/Komal.jpeg" alt="sample68"/>
               <div class="border one">
                 <div></div>
               </div>
