--- a/PickSuggestion.html
+++ b/PickSuggestion.html
@@ -8,12 +8,69 @@
 <nav id = "navbar">
     <a class = "active" href = "./index.html">Sero</a>
     <div id = "navbar-right">
-        <a href="PickSuggestion.html" id="pick-suggestion">Need a Suggestion?</a>
-            <a href = "#UserProfile">Login</a>
-            <a href = "#UserSignUp">Sign Up</a>
+        <!-- <a href="PickSuggestion.html" id="pick-suggestion">Need a Suggestion?</a> -->
+        <a href="make-suggestion.html"id="make-suggestion">Make a Suggestion</a>
+        <a onclick="openLoginForm()">Login</a>
+        <a onclick="openSignupForm()">Sign Up</a>
+        <!-- <div class="auth">
+            <a onclick="openLoginForm()">Login</a>
+            <a onclick="openSignupForm()">Sign Up</a>
+        </div> -->
     </div>
 </nav>  
 <body>
+    <!-- Login/Signup Forms -->
+    <div class="popup-overlay"></div>
+    <div class="login-popup" id="login">
+      <div class="popup-close" onclick="closeLoginForm()">&times;</div>
+      <div class="form">
+        <div class="avatar">
+          <img src="https://bit.ly/31pHqJb" alt="">
+        </div>
+        <div class="header">
+          Member login
+        </div>
+        <div class="element">
+          <label for="username">Username</label>
+          <input type="text" id="login-username">
+        </div>
+        <div class="element">
+          <label for="password">Password</label>
+          <input type="password" id="login-password">
+        </div>
+        <div class="element">
+          <button>Login</button>
+        </div>
+      </div>
+    </div>
+  
+    <div class="signup-popup">
+      <div class="popup-close" onclick="closeSignupForm()">&times;</div>
+      <div class="form">
+        <div class="avatar">
+          <img src="https://bit.ly/31pHqJb" alt="">
+        </div>
+        <div class="header">
+          Member Sign up
+        </div>
+        <div class="element">
+          <label for="username">Username</label>
+          <input type="text" id="signup-username">
+        </div>
+        <div class="element">
+          <label for="password">Password</label>
+          <input type="password" id="signup-password">
+        </div>
+        <div class="element">
+          <label for="password">Confirm Password</label>
+          <input type="password" id="confirm-password">
+        </div>
+        <div class="element">
+          <button>Sign up</button>
+        </div>
+      </div>
+    </div>  
+    <!------------------------>
     <div class="container">
     <h1 class= "title">Suggestion</h1>
     <div id=mental-health> 
@@ -210,5 +267,6 @@
             }
 }
     </script>   
+        <script src="js/script.js" type="text/javascript"></script>
     </body>
 </html>
