--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <link href="css/style.css" type="text/css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="js/script.js" type="text/javascript"></script>
         <meta charset="UTF-8" />
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width" />
@@ -24,6 +23,7 @@
             </div>
         </div>
     </nav>
+    
     <body>
         <div class = "intro">
           <!-- daily challenge button -->
@@ -86,7 +86,7 @@
             <br>
         </div>
         <!-- Login/Signup Forms -->
-        <div class="popup-overlay"></div>
+        <div class="popup-overlay" onclick="closeLoginForm(); closeSignupForm()"></div>
         <div class="login-popup" id="login">
           <div class="popup-close" onclick="closeLoginForm()">&times;</div>
           <div class="form">
@@ -155,6 +155,8 @@
               </div>
             </figure>
           </div>
+        <script src="https://www.gstatic.com/firebasejs/8.2.3/firebase.js"></script>
+        <script src="js/script.js" type="text/javascript"></script>
     </body>
     
 </html>
