--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class = "active" href = "#Home">Sero</a>
         <p style = "padding-right: 700px;"> </p>
         <!--<img id = "sero-img" src = "sero.jpg">-->
-        <div>
+        <div class = "rightbuttons">
             <a id="pick-suggestion">Need a Suggestion?</a>
             <div id = "navbar-right">
                 <!-- Login and Signup Buttons -->
